--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
-        "phpstan/phpstan-symfony": "^1.1"
+        "phpstan/phpstan-symfony": "^1.1",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "config": {
         "allow-plugins": {
@@ -59,8 +60,10 @@
             "@auto-scripts"
         ],
         "phpstan": "phpstan",
+        "phpcs": "phpcs",
         "test": [
-            "@phpstan"
+            "@phpstan",
+            "@phpcs"
         ]
     },
     "conflict": {
