--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         ],
         "phpstan": "phpstan",
         "phpcs": "phpcs",
+        "phpcbf": "phpcbf",
         "test": [
             "@phpstan",
             "@phpcs"
