--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require-dev": {
         "phpstan/phpstan-symfony": "^1.1",
-        "squizlabs/php_codesniffer": "^3.6"
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/maker-bundle": "^1.36"
     },
     "config": {
         "allow-plugins": {
