--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "require-dev": {
         "phpstan/phpstan-symfony": "^1.1",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/maker-bundle": "^1.36"
+        "symfony/maker-bundle": "^1.36",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     },
     "config": {
         "allow-plugins": {
