Song and SongBook entity

--- a/.env
+++ b/.env
@@ -23,6 +23,6 @@ APP_SECRET=39b8dc5044cc6688dd19f2f47b09cc9a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://chorister:heslo@mariadb:3306/chorister?serverVersion=mariadb-10.6.4"
+DATABASE_URL="mysql://devel:heslo@mariadb:3306/chorister?serverVersion=mariadb-10.6.4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
