--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,12 @@
 includes:
     - vendor/phpstan/phpstan-symfony/extension.neon
     - vendor/phpstan/phpstan-symfony/rules.neon
+    - vendor/phpstan/phpstan-doctrine/extension.neon
+    - vendor/phpstan/phpstan-doctrine/rules.neon
 parameters:
     level: 9
     paths:
         - src
+    checkGenericClassInNonGenericObjectType: false
     symfony:
         containerXmlPath: var/cache/dev/App_KernelDevDebugContainer.xml
