--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,4 +24,4 @@ services:
     # please note that last definitions always *replace* previous ones
     App\Listener\ExceptionListener:
         tags:
-            - { name: kernel.event_listener, event: kernel.exception, priority: 50 }
+            - { name: kernel.event_listener, event: kernel.exception }
