--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/serializer": "6.0.*",
+        "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
